# agents-and-skills

./: .CLEANUP_20260429.md  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  RULES.md  STRATEGY.md  Web Design CLAUDE.md  create_issues.sh
_SCRIPTS/: create_issues.sh  create_issues_generic.sh
_SOLUTIONS/: 2026-04-27-codex-install-solution.md
agents/: accessibility-agent.md  accounting-agent.md  agent_template.py  agents.md  cli-agent.md  containerization-agent.md  dashboard-reporting-agent.md  nlp-agent.md  process-modernization-agent.md  security-agent.md
skills/: api-integration.md  approved-packages.md  cli-development.md  configuration-management.md  dashboarding-reporting.md  database-access.md  error-handling.md  legal-fiscal-analysis.md  logging-observability.md  nlp-processing.md  process-modernization.md  python-formatting.md  python-linting.md  python-testing.md  python-uv-workflow.md  skill_template.py  skills.md  web-development.md
subagents/: agents.md  data-engineering-agent.md  legal-fiscal-agent.md  nlp-agent.md  security-agent.md  testing-agent.md  web-dev-agent.md
templates/: epilogue.md  epilogue_claude.md  epilogue_codex.md  epilogue_gemini.md  pyproject.toml  pytest.ini  ruff.toml
tools/: collections.md  datetime.md  file-io.md  hashing-encoding.md  itertools-functools.md  math-statistics.md  serialization.md  string-processing.md  tools.md
