# pyproject.toml template
#
# Usage:
#   1. Copy this file to your project root
#   2. Replace all <PLACEHOLDER> values with your project's information
#   3. Run `uv sync` to install dependencies
#
# Placeholders:
#   <PROJECT_NAME>   - Python package name (snake_case, e.g. my_project)
#   <PROJECT_SLUG>   - CLI command name (kebab-case, e.g. my-project)
#   <DESCRIPTION>    - One-line project description
#   <AUTHOR_NAME>    - Your full name
#   <AUTHOR_EMAIL>   - Your email address
#   <ENTRY_MODULE>   - Python import path for CLI entry point (e.g. my_project.cli:main)

[project]
name = "<PROJECT_NAME>"
version = "0.1.0"
description = "<DESCRIPTION>"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "<AUTHOR_NAME>", email = "<AUTHOR_EMAIL>" }]

# Runtime dependencies — add with `uv add <package>`
dependencies = []

[project.optional-dependencies]
# Development and CI dependencies — install with `uv sync --all-extras`
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

# Uncomment if building a CLI tool with a console entry point
# [project.scripts]
# <PROJECT_SLUG> = "<ENTRY_MODULE>"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/<PROJECT_NAME>"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
markers = [
    "unit: fast, isolated unit tests (no external I/O)",
    "integration: tests that touch files, databases, or network",
    "slow: long-running tests (>1 second)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "S",     # flake8-bandit (security)
    "N",     # pep8-naming
    "ANN",   # flake8-annotations
    "RUF",   # ruff-specific rules
    "PT",    # flake8-pytest-style
    "SIM",   # flake8-simplify
    "BLE",   # flake8-blind-except
    "PL",    # pylint
]
ignore = [
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D203",   # conflicts with D211
    "D213",   # conflicts with D212
    "ANN101", # self annotation not required
    "ANN102", # cls annotation not required
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # allow assert in tests
    "ANN",     # type hints optional in tests
    "D",       # docstrings optional in tests
    "PLR2004", # allow magic values in tests
]
"src/**/__init__.py" = [
    "F401",    # allow unused imports in __init__ (re-exports)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
magic-trailing-comma = true

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
show_error_codes = true

# Override for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "reportlab.*",
    "questionary.*",
    "schedule.*",
    "dash.*",
    "plotly.*",
]
ignore_missing_imports = true
